[project]
name = "postcompetition-csiro-biomass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # 基礎ライブラリ
    "torch==2.9.0",
    "torchvision==0.24.0",
    "numpy==2.0.2",
    "pandas==2.2.2",
    "scipy==1.15.3",
    "scikit-learn==1.6.1",
    "matplotlib==3.10.0",
    "opencv-python==4.12.0.88",
    "timm==1.0.20",
    "albumentations==2.0.8",
    "wandb==0.22.2",
    "transformers==4.57.1",
    "omegaconf==2.3.0",
    "pytorch_lightning==2.6.0",
    "hydra-core==1.3.2",
    "seaborn>=0.13.2",
    "ipykernel>=7.1.0",
    # 追加ライブラリ
    "huggingface-hub>=0.36.0",
    "safetensors>=0.7.0",
]


[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
# torchaudio = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
